tests/build/cases/widget/name_conflict2.stderr
error[E0428]: the name `TestWidget` is defined multiple times
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- previous definition of the type `TestWidget` here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TestWidget` redefined here
  |
  = note: `TestWidget` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__wgt__TestWidget__` is defined multiple times
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- previous definition of the macro `__wgt__TestWidget__` here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `__wgt__TestWidget__` redefined here
  |
  = note: `__wgt__TestWidget__` must be defined only once in the macro namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__widget_path__TestWidget__` is defined multiple times
 --> cases/widget/name_conflict2.rs:6:18
  |
3 | #[widget($crate::TestWidget)]
  |                  ---------- previous definition of the module `__widget_path__TestWidget__` here
...
6 | #[widget($crate::TestWidget)]
  |                  ^^^^^^^^^^ `__widget_path__TestWidget__` redefined here
  |
  = note: `__widget_path__TestWidget__` must be defined only once in the type namespace of this module

error[E0659]: `__wgt__TestWidget__` is ambiguous
 --> cases/widget/name_conflict2.rs:6:1
  |
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
  |
  = note: ambiguous because of multiple potential import sources
note: `__wgt__TestWidget__` could refer to the macro defined here
 --> cases/widget/name_conflict2.rs:6:1
  |
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: `__wgt__TestWidget__` could also refer to the macro defined here
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Deref` for type `TestWidget`
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- first implementation here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `DerefMut` for type `TestWidget`
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- first implementation here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `zero_ui::prelude::new_widget::WidgetImpl` for type `TestWidget`
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- first implementation here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `start`
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `start`
...
6 | #[widget($crate::TestWidget)]
  | ----------------------------- other definition for `start`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `widget_type`
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `widget_type`
...
6 | #[widget($crate::TestWidget)]
  | ----------------------------- other definition for `widget_type`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
